# startup_deck_generator

./: .env.example  LICENSE  README.md  pyproject.toml
startup_deck_generator/: app.py  crew.py  main.py  pdf_generator.py
startup_deck_generator/config/: agents.yaml  tasks.yaml
